--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
     <div id="root">
       <h1>We are already here</h1>
     </div>
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
     <!-- first element using react -->
-    <script src="./App.js"></script>
+    <script src="./App.js" type="module"></script>
   </body>
 </html>
