--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>We are already here</h1>
+      <h1>Not rendered</h1>
     </div>
     <!-- first element using react -->
     <script src="./App.js" type="module"></script>
